--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
+    <!--Main Screen-->
     <string name="app_name">LaboratoryWork</string>
     <string name="say_hello">Hello, %1$s</string>
     <string name="first_name_hint">First name</string>
     <string name="last_name_hint">Last name</string>
     <string name="email_hint">Email</string>
     <string name="phone_hint">Phone</string>
+
+    <!---->
     <string name="password_hint">Password</string>
     <string name="password_confirmation_hint">Confirm password</string>
     <string name="submit">Submit</string>
     <string name="view_list">View list</string>
+    <string name="contacts">Контакти</string>
 </resources>
